# Gradient-Descent-and-Optimizers

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AUDIT.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: app.py
app/components/: landscape_tab.py  scheduler_tab.py  training_tab.py
configs/: adam_mnist.yaml  adamw_mnist.yaml  lion_mnist.yaml  momentum_sgd_mnist.yaml  rmsprop_mnist.yaml  scheduler_comparison.yaml  sgd_mnist.yaml
docs/adr/: 0001-client-side-web-app.md  0002-python-reference-parity.md
docs/superpowers/plans/: 2026-07-07-gdo-web-vercel.md  2026-07-07-production-grade-revamp.md
docs/superpowers/specs/: 2026-07-07-gdo-web-vercel-design.md
notebooks/: 01_gradient_descent_variants.ipynb  02_adaptive_optimizers.ipynb  03_lr_scheduling_and_techniques.ipynb
scripts/: dump_reference.py
src/gdo/: __init__.py  __main__.py  config.py
src/gdo/experiment/: __init__.py  logger.py
src/gdo/landscapes/: __init__.py  plotter.py  surfaces.py
src/gdo/optimizers/: __init__.py  adaptive.py  base.py  schedulers.py  sgd.py
src/gdo/training/: __init__.py  metrics.py  models.py  trainer.py
tests/: conftest.py  test_adaptive.py  test_landscapes.py  test_schedulers.py  test_sgd.py  test_trainer_logging.py  test_training.py
web/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: LineChart.tsx  LossSurfaceCanvas.tsx  ui.tsx
web/components/tabs/: CompareTab.tsx  LandscapeTab.tsx  SchedulerTab.tsx
web/lib/: mlp.ts  optimizers.ts  palette.ts  rng.ts  schedulers.ts  surfaces.ts  types.ts
web/tests/: mlp.test.ts  optimizers.test.ts  schedulers.test.ts  surfaces.test.ts
web/tests/fixtures/: reference.json
