[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdo"
version = "0.1.0"
description = "Gradient Descent and Optimizers — production-grade optimizer benchmarking library"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Shivani Bokka" }]

dependencies = [
    "numpy>=1.26",
    "torch>=2.2",
    "torchvision>=0.17",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "mlflow>=2.12",
    "matplotlib>=3.8",
    "plotly>=5.20",
    "tqdm>=4.66",
]

[project.optional-dependencies]
app = ["gradio>=4.26"]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "black>=24.3",
    "ruff>=0.3",
    "ipykernel>=6.29",
    "notebook>=7.1",
]

[project.scripts]
gdo-train = "gdo.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
